# Crystal

./: .clang-tidy  .gitignore  CMakeLists.txt  Crystal.ino  README.md  copy_to_device.sh  gdb-cmds  handlers.ino  network.ino  secrets.h  status.ino  wifi-monitor.sh
CrystalAPI/: Flame.bru  Jacob's Ladder.bru  Rainbow.bru  Solid.bru  Status.bru  Warp Core.bru  WarpCore.bru  bruno.json
CrystalAPI/environments/: Crystal IP.bru  Crystal.bru  Zircon IP.bru  Zircon.bru
assets/: crystal.css  crystal.js  index.html
data/: crystal.css  crystal.js  index.html  setup.html
esp8266/: CMakeLists.txt  build.sh  esp8266.ino  gdb-cmds  upload-ota.sh
esp8266/src/: ArduinoStreamLogger.cpp  ArduinoStreamLogger.h  Filesystem.cpp  Handlers.cpp  Handlers.h  Network.cpp  Renderer.h  Status.cpp  System.h
esp8266/src/Models/: Gradient.cpp  Gradient.h  JacobsLadder.cpp  JacobsLadder.h  Map.cpp  Model.h  Pulsate.h  Solid.h  Sum.h  Triangle.h  WarpCore.cpp  WarpCore.h
esp8266/src/lib/: lumos-arduino
lib/: .gitignore  README.md
old-lumos-arduino/: Logger.cpp  Logger.h  Lumos.cpp  lumos-arduino.ino
raspberry-pi-pico/: CMakeLists.txt  Crystal.cpp  DHCPServer.cpp  DHCPServer.h  Demos.cpp  Demos.h  Filesystem.cpp  Filesystem.h  HTTPHandlers.cpp  HTTPHandlers.h  HTTPReqeuestParser.cpp  HTTPReqeuestParser.h  HTTPRequest.h  HTTPServer.cpp  HTTPServer.h  Handlers.cpp  Handlers.h  HttpServer.cpp  HttpServer.h  LogServer.cpp  LogServer.h  Network.cpp  Network.h  NetworkLogger.h  Renderer.cpp  Renderer.h  Status.cpp  Status.h  System.cpp  System.h  Utils.cpp  Utils.h  WS2812Strip.cpp  WS2812Strip.h  dhcpserver.cpp  dhcpserver.h  embed_files.py  lwipopts.h  openocd_pico.cfg
raspberry-pi-pico/DHCP/: DHCPLeasePool.cpp  DHCPLeasePool.h  DHCPServer.cpp  DHCPServer.h
raspberry-pi-pico/HTTP/: ConnectionContext.cpp  ConnectionContext.h  HTTPRequest.cpp  HTTPRequest.h  HTTPRequestParser.cpp  HTTPRequestParser.h  HTTPResponse.h  HTTPServer.cpp  HTTPServer.h
raspberry-pi-pico/Logging/: ConsoleLogger.h  LogServer.cpp  LogServer.h  NetworkLogger.h
raspberry-pi-pico/MDNS/: MDNSServer.cpp
raspberry-pi-pico/Models/: Crystal.cpp  Crystal.h  Flame.cpp  Flame.h  Gradient.cpp  JacobsLadder.cpp  JacobsLadder.h  Map.cpp  Map.h  Model.h  Pulsate.cpp  README.md  Rotate.cpp  Shift.cpp  Shift.h  Sum.cpp  Triangle.cpp  WarpCore.cpp  Window.cpp  Window.h
raspberry-pi-pico/Networking/: DHCPLeasePool.cpp  DHCPLeasePool.h  DHCPServer.cpp  DHCPServer.h  HTTPHandlers.cpp  HandlerUtils.cpp  HandlerUtils.h  Handlers.cpp  Handlers.h  MDNS.cpp  MDNS.h  MDNSServer.cpp  MDNSServer.h  Network.cpp  Network.h  NetworkUtils.cpp  NetworkUtils.h  WiFiScanResult.cpp  WiFiScanResult.h  WiFiScanner.cpp  WiFiScanner.h  WiFiSoftAP.cpp
raspberry-pi-pico/Networking/DHCP/: DHCPLeasePool.cpp  DHCPServer.cpp  DHCPServer.h
raspberry-pi-pico/Networking/HTTP/: HTTPConnectionContext.cpp  HTTPConnectionContext.h  HTTPHandlerUtils.cpp  HTTPHandlerUtils.h  HTTPRequest.cpp  HTTPRequestParser.cpp  HTTPServer.cpp  HTTPServer.h
raspberry-pi-pico/Networking/MDNS/: MDNSServer.cpp  MDNSServer.h
raspberry-pi-pico/Networking/WiFi/: WiFIStation.cpp  WiFIStation.h  WiFiScanResult.cpp  WiFiScanner.cpp  WiFiScanner.h  WiFiSoftAP.cpp  WiFiSoftAP.h
raspberry-pi-pico/WiFi/: WiFiScanResult.h  WiFiScanner.cpp  WiFiSoftAP.h
raspberry-pi-pico/network_proto/: README  dhcpserver.cpp  dhcpserver.h  dnsserver.cpp  dnsserver.h
src/: Animations.cpp  Animations.h  Combinations.cpp  Combinations.h  Demos.cpp  Demos.h  Filesystem.cpp  Handlers.cpp  Handlers.h  Model.cpp  Model.h  Models.cpp  Models.h  Network.cpp  Network.h  Renderer.cpp  Renderer.h  Status.cpp  Status.h  System.cpp  code.py  demos.py  handlers.py  network.py  utils.h  utils.py
src/Models/: Crystal.cpp  Crystal.h  Flame.cpp  Flame.h  Gauge.cpp  Gauge.h  Gradient.cpp  Gradient.h  JacobsLadder.cpp  JacobsLadder.h  Map.h  Pulsate.cpp  README.md  Reverse.h  Rotate.cpp  Rotate.h  Shift.cpp  Shift.h  Solid.h  Sum.cpp  Sum.h  Triangle.cpp  Triangle.h  WarpCore.cpp  WarpCore.h  Window.cpp
test/: CMakeLists.txt
